--- a/workflow/grel_scripts/3.1_author_column.md
+++ b/workflow/grel_scripts/3.1_author_column.md
@@ -1,1 +1,88 @@
-//Write Chahna's Version here//
+## Author Name Normalization Workflow (Chahna's Version)
+### 1.make a duplicate of the column author (n)
+1.Create a duplicate of the `author` column.
+-New Column Name: author (n)
+-On Error: copy value from original column, Expression GREL- value (default) 
+2.Rename the original column as: author (o)
+---
+### 2.Remove Dates of Birth and Death
+1.Sort the `author (n)` column alphabetically (A–Z).
+2.Remove punctuation (excluding commas) and trim whitespace:
+-Go to author (n), Edit cells → Transform
+```javascript
+value.replace(/[\?\-]/, "").trim() 
+```
+-Ensure On error: Keep original
+3. remove any sequence of numbers (same procedure as above
+```javascript
+value.replace(/\d+/, "").trim() 
+```
+### 3.Remove Brackets
+```javascript
+value.replace(/[\\(\)\[\]]/, "").trim() 
+```
+### 4. Remove unwanted words or phrases (titles or occupation)
+1. make a list of all words/phrases (separately) to be removed so it could just be ‘poet’ to be removed or an entire phrase like ‘author of romeo juliet’ 
+-Text facet → custom text facet → write the following regex replace strings you want to find followed by pipe symbol
+```javascript
+value.find(/(author of|vicar of|th viscount|duke of|of shaftesbury|approximately|dramatist|the poet|city poet|comedian|of brighton|i.e. pearl|esq. of newcastle|master of arts|actor|historiographer|calling himself|earl of|vicar|poet|poetical writer|secretary|poet laureate|barristeratlaw|baron|sir|lady|etc.|of christ church|butler|theatrical machinist)/i).length() > 0
+```
+2.Check preview once to see all words/phrases are added and return true (this is a check to see you covered all words) and click OK
+3. go to left side bar → Open facet filter → click the true filter. Preview again and compare with list to ensure everything relevant has been filtered
+4. Remove true filter, first replace words:
+```javascript
+value.replace(/\b(lady|duke of|baron|vicar of poling|th viscount|duke of newcastle|poet|city poet|dramatist|sir|approximately|actor|comedian|of brighton|esq. of newcastle|of christ church oxford|earl of|poetical writer|barristeratlaw|master of arts|poet laureate|theatrical machinist)\b/i, "").trim()
+```
+5.then replace phrases:
+```javascript
+value.replace(/(author of|calling himself|duke of|of shaftesbury|i.e. pearl|historiographer|barristeratlaw of|secretary).*/i, "").trim()
+```
+### 5.Remove last dot, checking commas between lastname,firstname and ensuring dot in abbrievations
+1.Edit Columns → Transform → Common Transform → Remove consecutive space
+2.Remove all last dots
+```javascript
+value.replace(/\.$/, "").trim()
+```
+3.remove commas left from the procedures of removing unwanted words:
+```javascript
+value.replace(/,\s*$/, "")
+```
+4.remove double commas, if words taken off from middle:
+```javascript
+value.replace(/,\s*,/, ",")
+```
+5.ensure dots in abbreviations pass both arguments:
+```javascript
+value.replace(/\.[A-Za-z]$/, "$0.")
+```
+```javascript
+value.replace(/ [A-Za-z]$/, "$0.")
+```
+
+## Author Name Normalization Workflow (Liangyu's Version)
+### 1.Handle pseudonyms
+1. isolate all records that contain the key markers pseud or i.e..
+-Go to author (n) Text facet → custom text facet
+```javascript
+value.find(/(pseud|i\.e\.)/i).length() > 0
+```
+-go to left side bar → Open facet filter → click the true filter
+2. Delete Pseudonym Markers and Subsequent Text
+Go to author (n) Edit cells → Transform
+```javascript
+value.replace(/(.),\s(pseud\.?|i\.e\.).*$/i, "$1").trim()
+```
+### 2.Expand Abbreviated Names
+1.Identify and Flag Target Records:
+-create a temporary boolean column to mark records that are structurally and physically long enough to contain an abbreviation followed by a full name expansion.
+-Go to author (n) Edit column → Add column based on this column, in GREL cell:
+```javascript
+value.find(/^[a-z]{2,}.?,\s.*?\./i).length() > 0 and value.split(/\s+/).length() > 4
+```
+2.Manually Vet and Correct the Data 
+-Go to Needs Expansion → Facet → Boolean Facet </aside>
+-go to the left side bar and click true. Manually review all records in the main panel. Perform the expansion directly here:
+-For True Expansion Candidates (e.g., cross, j. c. james cartwright), click the author (n) cell and manually replace the value with the fully expanded name (e.g., cross, james cartwright).
+-For False Positives (e.g., a short record incorrectly marked true that requires no expansion), click the Needs Expansion cell and change the value to false (and do not edit the author (n) cell).
+### 3.1. Remove Temporary Columns:
+Go to Needs Expansion Edit column → Remove column </aside>
