Add Liangyu's Author Name Normalization Workflow
Added Liangyu's version of the Author Name Normalization Workflow, detailing steps for handling pseudonyms, expanding abbreviated names, and removing temporary columns.

--- a/workflow/grel_scripts/3.2_author_column.md
+++ b/workflow/grel_scripts/3.2_author_column.md
@@ -1,1 +1,30 @@
 //Write Liangyu's Version here- specify why there was a need for second version//
+
+## Author Name Normalization Workflow (Liangyu's Version)
+**Note:**When cleaning titles or honorifics, we noticed that we should always remove longer phrases before single words to avoid breaking the structure of multi-word expressions. For example, if both “right hon.” and “hon.” are in your remove-list, deleting “hon.” first would split “right hon.” into “right” and leave it unmatched in the next step. By removing the full phrase “right hon.” first and then cleaning the shorter word “hon.”, you ensure complete and accurate extraction. This rule applies to all hierarchical patterns: phrase → word is always the safe order. 
+### 1.Handle pseudonyms
+1. isolate all records that contain the key markers pseud or i.e..
+-Go to author (n) Text facet → custom text facet
+```javascript
+value.find(/(pseud|i\.e\.)/i).length() > 0
+```
+-go to left side bar → Open facet filter → click the true filter
+2. Delete Pseudonym Markers and Subsequent Text
+Go to author (n) Edit cells → Transform
+```javascript
+value.replace(/(.),\s(pseud\.?|i\.e\.).*$/i, "$1").trim()
+```
+### 2.Expand Abbreviated Names
+1.Identify and Flag Target Records:
+-create a temporary boolean column to mark records that are structurally and physically long enough to contain an abbreviation followed by a full name expansion.
+-Go to author (n) Edit column → Add column based on this column, in GREL cell:
+```javascript
+value.find(/^[a-z]{2,}.?,\s.*?\./i).length() > 0 and value.split(/\s+/).length() > 4
+```
+2.Manually Vet and Correct the Data 
+-Go to Needs Expansion → Facet → Boolean Facet </aside>
+-go to the left side bar and click true. Manually review all records in the main panel. Perform the expansion directly here:
+-For True Expansion Candidates (e.g., cross, j. c. james cartwright), click the author (n) cell and manually replace the value with the fully expanded name (e.g., cross, james cartwright).
+-For False Positives (e.g., a short record incorrectly marked true that requires no expansion), click the Needs Expansion cell and change the value to false (and do not edit the author (n) cell).
+### 3.1. Remove Temporary Columns:
+Go to Needs Expansion Edit column → Remove column </aside>
