Add author name normalization workflow steps
This document outlines the steps for normalizing author names, including removing electronic resource tags, refining bracketed titles, extracting metadata, and cleaning up punctuation.

--- a/workflow/grel_scripts/4.1_title_column.md
+++ b/workflow/grel_scripts/4.1_title_column.md
@@ -1,1 +1,97 @@
-//Write Chahna's Version here//
+## Author Name Normalization Workflow (Chahna's Version)
+### 1.Remove electronic resource
+1.title (n) → text filter → on left bar type [electronic resource] to check how many rows have it (for me all rows had it)
+2.title (n) → edit cell → transform
+```javascript
+value.replace("[electronic resource]", "").trim()
+```
+### 2. refine bracketed titles
+refine the titles start with \[ and then with \].
+-title (n) → text facet → custom text facet:
+```javascript
+if(value.startsWith("["), if(value.endsWith("]"),"yes","no"),"no")
+```
+-ensure text facet is yes then title (n) → edit cells → transform 
+```javascript
+value.replace(/^\[(.*)\]$/, "$1")
+```
+### 3. remove additional information usually after … 
+**note**: Lots of additional information in titles is usually given after …, so let’s add all of this (after checking) in another column called metadata.
+1.In title (n) → text filter → on left hand bar → type … in filter, it gives you all cells which contain …
+2.some … are inside brackets which need to be ignored (otherwise the information in brackets will be transferred), so:
+-- Click **▼** on the **Title** column → **Edit cells → Transform…**
+- Use this GREL to temporarily replace ellipses inside brackets with a placeholder (e.g., `@@ELLIPSIS@@`):
+```javascript
+value.replace(/\[([^\]]*?)\.\.\.([^\]]*?)\]/, "[$1@@ELLIPSIS@@$2]")
+```
+3.extract all information after … in new column
+-with text filter … on, go to title (n) → edit column → add column based on this column. New column name: metadata
+```javascript
+if(
+  value.contains("..."),
+  value.split("...")[1].trim() + "..." + value.split("...").slice(2).join("...").trim(),
+  if(
+    value.contains("…"),
+    value.split("…").slice(1).join("…").trim(),
+    ""
+  )
+)
+```
+4.remove the metadata from title (n)
+-title (n) → edit cells → transform
+```javascript
+if(
+  value.contains("..."),
+  value.split("...")[0].trim(),
+  if(
+    value.contains("…"),
+    value.split("…")[0].trim(),
+    value
+  )
+)
+```
+5.Replace the temporary placeholder inside brackets  
+-title (n) → edit cells → transform 
+```javascript
+value.replace("@@ELLIPSIS@@", "...")
+```
+### 4. remove metadata from brackets in another column 
+1. Filter by brackets 
+**note**: To check if what is in the brackets and what follows it needs to be removed, create a custom text facet with every cell that has brackets so title (n) → facet → custom text facet
+```javascript
+if(value.contains("["), 
+   if(value.contains("]"), 
+      value.substring(value.indexOf("["), value.indexOf("]")+1), 
+      ""
+   ), 
+   ""
+)
+```
+2. Extract trailing information after brackets 
+- Check each custom facet filter and manually edit any trailing information in metadata
+- filter blanks in facet for trailing texts too and extract the additional info to metadata: go to title (n) → text filter → filter by ‘as it’, ‘alter’, ‘translate’ 
+- Move information in brackets to metadata: metadata → edit cells → transform to add bracketed texts in metadata
+ ```javascript
+coalesce(cells["metadata"].value, "") + 
+(if(cells["title (n)"].value.contains("["), 
+    " " + cells["title (n)"].value.substring(
+        cells["title (n)"].value.indexOf("["), 
+        cells["title (n)"].value.indexOf("]") + 1
+    ), 
+    ""
+)).trim()
+```
+-remove bracketed text from title (n): go to title (n) → edit cells → transform
+ ```javascript
+value.replace(/\s*\[.*?\]\s*/, "").trim()
+```
+### 5. remove punctuations at end of string in title(n) and metadata
+1.remove , . ; at end of string (do for both title (n) and metadata using transform
+ ```javascript
+value.replace(/[,;.]$/, "").trim()
+```
+2.keep it if it is etc. or abbreviations
+ ```javascript
+`if(value.endsWith("etc"), value + ".", value)`
+`value.replace(/\.[A-Za-z]$/, "$0.")`
+```
