--- a/workflow/grel_scripts/4.2_title_column.md
+++ b/workflow/grel_scripts/4.2_title_column.md
@@ -1,1 +1,17 @@
-//Write Liangyu's version here and specify why there was a need for second version for title (basically her method is better to extract metadata after brackets)//
+## Title Normalization Workflow, extracting the metadata (Liangyu's Version)
+**note**: This method may make it easier to extract the metadata after the brackets. As we already clustered the statements in  ‘ [ ]’ , if we facet the title based on these brackets according to the first part of procedures, we can just go through it by clusters and then cut the whole title from the beginning of ‘[’, including all the contents inside and which follows after the whole brackets. The good things is structured enough and we can compute it, then the procedures on the third part are not needed, because you cut the part with the first brackets to metadata already. 
+###2. Refine the metadata after square brackets:
+1.Extract the metadata directly
+```javascript
+coalesce(value, "") +
+if(cells["title (n)"].value.contains("["),
+" " + cells["title (n)"].value.substring(cells["title (n)"].value.indexOf("[")),
+""
+) 
+```
+2.Clean the title
+```javascript
+if(value.contains("["), value.split("[")[0], value).trim()
+```
+3.Handle exceptions
+mark the exceptions with star.
