Update title from 'Author Name' to 'Title'

--- a/workflow/grel_scripts/4.1_title_column.md
+++ b/workflow/grel_scripts/4.1_title_column.md
@@ -1,4 +1,4 @@
-## Author Name Normalization Workflow (Chahna's Version)
+## Title Normalization Workflow (Chahna's Version)
 ### 1.Remove electronic resource
 1.title (n) → text filter → on left bar type [electronic resource] to check how many rows have it (for me all rows had it)
 2.title (n) → edit cell → transform
